<resources>
    <string name="app_name">EcoMonitor</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_ecosystem">ecosystem</string>
    <string name="entrar">Entrar</string>
    <string name="ecomonitor">EcoMonitor</string>
    <string name="a_adir_ecosistema">Añadir ecosistema</string>
    <string name="salir">Salir</string>
    <string name="estos_son_tus_ecosistemas">Estos son tus ecosistemas</string>
    <string name="ecosistemas">Ecosistemas:</string>
    <string name="eliminar_ecosistema">Eliminar ecosistema</string>
    <string name="registrar_usuario">Registrar usuario</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="repetir_contraseña">Repetir contraseña</string>
    <string name="correo">Correo</string>
    <string name="volver">Volver</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
</resources>